...

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/menu_share_advanced_permissions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_default_item_height"
        android:layout_marginHorizontal="@dimen/bottom_sheet_default_item_horizontal_margin"
        android:paddingHorizontal="@dimen/bottom_sheet_default_item_horizontal_padding"
        android:background="@drawable/dialog_item_background"
        android:orientation="horizontal"
...
            android:textSize="@dimen/dialog_default_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_share_send_new_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_default_item_height"
        android:layout_marginHorizontal="@dimen/bottom_sheet_default_item_horizontal_margin"
        android:paddingHorizontal="@dimen/bottom_sheet_default_item_horizontal_padding"
        android:background="@drawable/dialog_item_background"
        android:orientation="horizontal"
...
            android:textSize="@dimen/dialog_default_text_size"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_share_send_link"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_default_item_height"
        android:layout_marginHorizontal="@dimen/bottom_sheet_default_item_horizontal_margin"
        android:paddingHorizontal="@dimen/bottom_sheet_default_item_horizontal_padding"
        android:background="@drawable/dialog_item_background"
        android:orientation="horizontal"
...
            android:textSize="@dimen/dialog_default_text_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_share_unshare"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_default_item_height"
        android:layout_marginHorizontal="@dimen/bottom_sheet_default_item_horizontal_margin"
        android:paddingHorizontal="@dimen/bottom_sheet_default_item_horizontal_padding"
        android:background="@drawable/dialog_item_background"
        android:orientation="horizontal"
...
