...
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_navigation_menu"
            app:layout_behavior="com.nextcloud.ui.behavior.OnScrollBehavior" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/floating_action_button_bottom_margin"
            android:contentDescription="@string/fab_label"
...
